# grammers

./: Cargo.toml
lib/grammers/: Cargo.toml
lib/grammers-client/: Cargo.toml  DEPS.md
lib/grammers-client/examples/: dialogs.rs  downloader.rs  echo.rs  inline-pagination.rs  reconnection.rs
lib/grammers-client/src/: lib.rs  utils.rs
lib/grammers-client/src/client/: chats.rs  client.rs  files.rs  messages.rs  net.rs  updates.rs
lib/grammers-client/src/types/: chats.rs  downloadable.rs  media.rs  message.rs  update.rs
lib/grammers-client/src/types/chat/: channel.rs  mod.rs  user.rs
lib/grammers-crypto/: Cargo.toml
lib/grammers-crypto/src/: lib.rs  ring_buffer.rs
lib/grammers-mtproto/: Cargo.toml
lib/grammers-mtproto/src/: authentication.rs  lib.rs
lib/grammers-mtproto/src/mtp/: encrypted.rs  mod.rs  plain.rs
lib/grammers-mtsender/: Cargo.toml
lib/grammers-mtsender/src/: lib.rs  retry.rs
lib/grammers-session/: Cargo.toml  build.rs
lib/grammers-session/src/: lib.rs
lib/grammers-session/src/chat/: hash_cache.rs  packed.rs
lib/grammers-session/src/message_box/: adaptor.rs  mod.rs
lib/grammers-tl-gen/: Cargo.toml  DEPS.md
lib/grammers-tl-gen/src/: enums.rs  grouper.rs  lib.rs  metadata.rs  structs.rs
lib/grammers-tl-gen/tests/: deps.rs  lib.rs
lib/grammers-tl-parser/: Cargo.toml
lib/grammers-tl-parser/src/: errors.rs  tl_iterator.rs
lib/grammers-tl-parser/src/tl/: definition.rs  ty.rs
lib/grammers-tl-types/: Cargo.toml  build.rs
lib/grammers-tl-types/src/: generated.rs  serialize.rs
lib/test-helpers/: Cargo.toml
lib/test-helpers/src/: lib.rs
