[package]
version.workspace = true
name = "grammers-client"
description = """
A high level client to interact with Telegram's API.
"""
documentation = "https://docs.rs/grammers-client"
keywords = ["mtproto", "telegram", "tl"]
categories = ["api-bindings"]
edition.workspace = true

[features]
markdown = ["pulldown-cmark"]
html = ["html5ever"]
proxy = ["grammers-mtsender/proxy"]
parse_invite_link = ["url"]
unstable_raw = []

[dependencies]
log = { workspace = true }
tokio = { workspace = true }
chrono = "0.4.31"
futures-util = { version = "0.3.15", default-features = false, features = [
    "alloc",
] }
grammers-crypto = { workspace = true }
grammers-mtproto = { workspace = true }
grammers-mtsender = { workspace = true }
grammers-session = { workspace = true }
grammers-tl-types = { workspace = true, features = ["tl-mtproto"] }
html5ever = { version = "0", optional = true }
locate-locale = "0.2.0"
md5 = "0.7.0"
mime_guess = "2.0.4"
os_info = { version = "3.0.4", default-features = false }
pin-project-lite = "0.2"
pulldown-cmark = { version = "0", default-features = false, optional = true }
url = { version = "2.4.1", optional = true }

[dev-dependencies]
simple_logger = { version = "5", default-features = false, features = [
    "colors",
] }
test-helpers = { workspace = true }
