[package]
name = "grammers-crypto"
version.workspace = true
license.workspace = true
description = """
Several cryptographic utilities to work with Telegram's data.
"""
keywords = ["telegram", "tl"]
categories = ["cryptography"]
edition.workspace = true

[dependencies]
aes = "0.8.3"
getrandom = "0.3"
glass_pumpkin = "1.6.0"
hmac = "0.12.1"
num-bigint = "0.4.4"
pbkdf2 = "0.12.2"
sha1 = "0.10.6"
sha2 = "0.10.8"
num-traits = "0.2.18"

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "cipher"
harness = false
