[package]
name = "grammers-mtproto"
version.workspace = true
license.workspace = true
description = """
An implementation of the Mobile Transport Protocol.
"""
homepage.workspace = true
repository.workspace = true
keywords = ["mtproto", "telegram", "tl"]
categories = ["network-programming"]
edition.workspace = true

[dependencies]
log = { workspace = true }
bytes = "1"
crc32fast = "1"
flate2 = "1"
getrandom = "0.3"
grammers-crypto = { workspace = true }
grammers-tl-types = { workspace = true }
num-bigint = "0.4"
sha1 = "0.10"
