[package]
name = "grammers-mtsender"
version.workspace = true
authors = ["Lonami Exo <totufals@hotmail.com>"]
license.workspace = true
description = """
A sender implementation using the Mobile Transport Protocol.
"""
homepage.workspace = true
repository.workspace = true
keywords = ["api", "mtproto", "telegram", "tl"]
categories = ["api-bindings", "network-programming"]
edition.workspace = true

[features]
proxy = ["tokio-socks", "trust-dns-resolver", "url"]

[dependencies]
bytes = "1.5.0"
futures-util = { version = "0.3.15", default-features = false, features = [
    "alloc",
] }
grammers-crypto = { workspace = true }
grammers-mtproto = { workspace = true }
grammers-tl-types = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tokio-socks = { version = "0", optional = true }
trust-dns-resolver = { version = "0", optional = true }
url = { version = "2.4.1", optional = true }

[dev-dependencies]
simple_logger = { version = "5", default-features = false, features = [
    "colors",
] }
tokio = { workspace = true }
