[package]
version.workspace = true
name = "grammers-session"
authors = ["Lonami Exo <totufals@hotmail.com>"]
description = """
Different session storages for Telegram data.
"""
documentation = "https://docs.rs/grammers-session"
categories = []
edition.workspace = true

[dependencies]
grammers-tl-types = { workspace = true }
grammers-crypto = { workspace = true }
log = { workspace = true }

[build-dependencies]
grammers-tl-gen = { workspace = true }
grammers-tl-parser = { workspace = true }
