[package]
version.workspace = true
name = "grammers-tl-gen"
authors = ["Lonami Exo <totufals@hotmail.com>"]
description = """
Rust code generator from Telegram's API definitions.
"""
documentation = "https://docs.rs/grammers-tl-gen"
keywords = ["telegram", "tl"]
categories = []
edition.workspace = true

[dependencies]
grammers-tl-parser = { workspace = true }

[dev-dependencies]
test-helpers = { workspace = true }
tempdir = "0.3"
walkdir = "2"
