[package]
name = "grammers-tl-parser"
authors = ["Lonami Exo <totufals@hotmail.com>"]
description = """
A parser for Type Language definitions.
"""
documentation = "https://docs.rs/grammers-tl-parser"
keywords = ["telegram", "tl"]
categories = ["parser-implementations"]
edition.workspace = true

[dependencies]
crc32fast = "1.3.2"
