[package]
version.workspace = true
name = "grammers-tl-types"
authors = ["Lonami Exo <totufals@hotmail.com>"]
description = """
Rust definitions for Telegram's API types and functions.
"""
documentation = "https://docs.rs/grammers-tl-types"
keywords = ["telegram", "tl"]
categories = ["data-structures", "encoding"]
include = ["build.rs", "src/*.rs", "tl/*.tl"]
edition.workspace = true

[build-dependencies]
grammers-tl-gen = { workspace = true }
grammers-tl-parser = { workspace = true }

[features]
default = ["impl-debug", "impl-from-enum", "impl-from-type", "tl-api"]

deserializable-functions = []
impl-debug = []
impl-from-enum = []
impl-from-type = []
tl-api = []
tl-mtproto = []
