[package]
name = "grammers"
version.workspace = true
authors = ["Lonami Exo <totufals@hotmail.com>"]
license = "MIT OR Apache-2.0"
description = """
A messaging application for Telegram.
"""
keywords = ["telegram", "tl"]
categories = []
edition.workspace = true

[dependencies]
grammers-client = { workspace = true }
